2022-12-15  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/zsh.h: Follow-up to the last commit: Fix a typo
	in a comment.

	* unposted: Src/zsh.h: lextok: Add an explanatory comment with
	a cross-reference.

2022-12-13  Bart Schaefer  <schaefer@zsh.org>

	* 51210: Src/exec.c: Clear errflag before calling EXIT trap,
	otherwise the trap is skipped for special-case errors in builtins

	* Philippe Altherr: 51198: Doc/Zsh/options.yo: Clarify and expand
	ERR_EXIT and ERR_RETURN documentation to include updated behavior

	* Philippe Altherr: 51193: NEWS, README: Discuss ERR_EXIT changes

2022-12-12  Peter Stephenson  <p.stephenson@samsung.com>

	* 51134: Src/exec.c, Test/A01grammar.ztst: ! return doesn't
	affect return status, only the (now irrelevant) local status
	within the returning function.

	* 51134: Doc/Zsh/options.yo: document interactions between
	ERR_EXIT and ERR_RETURN and interactive shells.

2022-12-09  Bart Schaefer  <schaefer@zsh.org>

	* 51161: Src/exec.c: correct errno after closing xtrace FD

	* Shohei YOSHIDA: 51111: Completion/Unix/Command/_global:
	update completion for global to version 6.6.8

	* 51047: Completion/Unix/Type/_canonical_paths: fix quoting
	of completion matches when _canonical_paths -N option is used

2022-12-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 51144, 51146:
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git: vcs_info git:
	stg: Extract patch descriptions

2022-12-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 51142: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Check the get-unapplied style as documented

2022-12-08  Peter Grayson  <pete@jpgrayson.net>

	* 51138: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	Updated StGit patch detection in vcs_info

2022-12-06  Bart Schaefer  <schaefer@zsh.org>

	* Shohei YOSHIDA: 51108: Completion/Unix/Command/_nkf: single
	letter forms of Shift-JIS / EUC-JP options were reversed

	* Atte Peltomäki: 51088: Functions/Misc/colors: typo in comment
