@@ -1,3 +1,9 @@
+2022-12-16  Oliver Kiddle  <opk@zsh.org>
+
+	* 51215: Src/Zle/zle_keymap.c, Test/X03zlebindkey.ztst,
+	Test/X02zlevi.ztst: consume whole CSI sequences from the input
+	even where they aren't explicitly bound
+
 2022-12-15  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* unposted: Src/zsh.h: Follow-up to the last commit: Fix a typo
